--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-calendars": "^1.1305.0",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.1.3",
